Updated fetch URLs and fallback error handling

--- a/public/event-details.html
+++ b/public/event-details.html
@@ -1,72 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Event Details</title>
+  <meta charset="UTF-8" />
+  <title>Event Details | Royal Seed Chapel</title>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #111, #222);
-      color: #fff;
-      padding: 30px;
-      text-align: center;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #1e1e1e, #2c2c2c);
+      color: white;
     }
 
     .container {
-      max-width: 900px;
-      margin: auto;
-      background: rgba(255, 255, 255, 0.05);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
-      backdrop-filter: blur(10px);
+      max-width: 800px;
+      margin: 80px auto;
+      padding: 20px;
+      background-color: rgba(0,0,0,0.5);
+      border-radius: 15px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
     }
 
     h1 {
-      color: #f0c040;
       font-size: 2.5rem;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      color: #ffd700;
     }
 
     p {
       font-size: 1.1rem;
-      margin-top: 10px;
-      color: #ddd;
+      line-height: 1.6;
+      margin-bottom: 10px;
     }
 
-    img, video {
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin: 15px 0;
+    }
+
+    video {
       width: 100%;
-      max-width: 700px;
-      margin-top: 25px;
-      border-radius: 15px;
-      box-shadow: 0 5px 25px rgba(0,0,0,0.5);
-    }
-
-    a.back {
-      color: #0af;
-      margin-top: 40px;
-      display: inline-block;
-      font-weight: bold;
-      text-decoration: none;
+      border-radius: 10px;
+      margin-top: 20px;
     }
 
     .not-found {
-      font-size: 1.5rem;
-      margin-top: 100px;
-      color: red;
+      text-align: center;
+      margin-top: 50px;
+      font-size: 1.2rem;
+      color: #f44336;
     }
   </style>
 </head>
 <body>
   <div class="container" id="eventContainer">
-    <h1>Loading...</h1>
+    <p>Loading event details...</p>
   </div>
-
-  <a class="back" href="events.html">← Back to Events</a>
 
   <script>
     const container = document.getElementById('eventContainer');
-    const API_URL = 'http://localhost:5000/api/events';
+
+    // Automatically choose API URL depending on environment
+    const API_BASE = location.hostname === 'localhost'
+      ? 'http://localhost:5000'
+      : 'https://royalsite.onrender.com';
 
     const urlParams = new URLSearchParams(window.location.search);
     const id = urlParams.get("id");
@@ -74,9 +72,9 @@
     if (!id) {
       container.innerHTML = '<p class="not-found">No event ID provided.</p>';
     } else {
-      fetch(`${API_URL}/${id}`)
+      fetch(`${API_BASE}/api/events/${id}`)
         .then(async res => {
-          if (!res.ok) throw new Error('Not found');
+          if (!res.ok) throw new Error('Event not found');
           const event = await res.json();
 
           container.innerHTML = `
